* fix card heights on mobile and compartmentalise notifications behaviours

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,8 +74,7 @@ html {
     .flex-main & {
       padding-left: 15px;
       overflow-y: hidden;
-      height: 100%;
-      > .card {
+      > .card-notifications {
         height: 100%;
         overflow-y: scroll;
         > .card-header {
